[gd_scene load_steps=4 format=2]

[ext_resource path="res://Stage_board.gd" type="Script" id=1]
[ext_resource path="res://stage_board.png" type="Texture" id=2]
[ext_resource path="res://stage_complete_block.png" type="Texture" id=3]

[node name="Stage_board" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Section1" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 16, 12 )
texture = ExtResource( 3 )

[node name="Section2" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 48, 12 )
texture = ExtResource( 3 )

[node name="Section3" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 80, 12 )
texture = ExtResource( 3 )

[node name="Section4" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 112, 12 )
texture = ExtResource( 3 )

[node name="Section5" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 144, 12 )
texture = ExtResource( 3 )

[node name="Section6" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 176, 12 )
texture = ExtResource( 3 )
